@@ -6,6 +6,8 @@ Revision history for libcif
     - added log::dispatch init_logging functions
     - added asn query support
     - fixed a deprecated TLS bug in Transport/HTTP
+    - added STDIN -i input to bin/cif
+    - added send_json function to lib/CIF/Client/...
 
 0.99.05 2012-10-01
     - implemented cif-protocol perl bindings here
